test/ui/tests/lowering/out-of-line-modules/location-attribute-on-inline-module.lushui
;;; TEST fail check --no-core

@(location "somewhere-not-inline")
module inline of
